<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/ic_launcher_foreground"
    id="karoo-forumslader"
    scansDevices="true"
    fitFile="true">

    <DataType
        typeId="fl_battery_level"
        displayName="@string/datafield_battery_level"
        description="@string/datafield_battery_level_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_battery_voltage"
        displayName="@string/datafield_battery_voltage"
        description="@string/datafield_battery_voltage_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_battery_current"
        displayName="@string/datafield_battery_current"
        description="@string/datafield_battery_current_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_consumer_current"
        displayName="@string/datafield_consumer_current"
        description="@string/datafield_consumer_current_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_speed"
        displayName="@string/datafield_speed"
        description="@string/datafield_speed_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_trip_distance"
        displayName="@string/datafield_trip_distance"
        description="@string/datafield_trip_distance_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_frequency"
        displayName="@string/datafield_frequency"
        description="@string/datafield_frequency_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_temperature"
        displayName="@string/datafield_temperature"
        description="@string/datafield_temperature_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />
    <DataType
        typeId="fl_generator_gear"
        displayName="@string/datafield_generator_gear"
        description="@string/datafield_generator_gear_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_charge_state"
        displayName="@string/datafield_charge_state"
        description="@string/datafield_charge_state_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_trip_energy"
        displayName="@string/datafield_trip_energy"
        description="@string/datafield_trip_energy_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_tour_energy"
        displayName="@string/datafield_tour_energy"
        description="@string/datafield_tour_energy_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_dynamo_power"
        displayName="@string/datafield_dynamo_power"
        description="@string/datafield_dynamo_power_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_odometer"
        displayName="@string/datafield_odometer"
        description="@string/datafield_odometer_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_day_distance"
        displayName="@string/datafield_day_distance"
        description="@string/datafield_day_distance_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_tour_distance"
        displayName="@string/datafield_tour_distance"
        description="@string/datafield_tour_distance_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

    <DataType
        typeId="fl_battery_range"
        displayName="@string/datafield_battery_range"
        description="@string/datafield_battery_range_desc"
        icon="@drawable/ic_launcher_foreground"
        graphical="false" />

</ExtensionInfo>
